# stm32_cubemx_hdd4780

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  devcontainer-stm32-cubemx-ads1115.ioc  usbipd.sh
.devcontainer/: .devcontainer.json  Dockerfile
Core/Src/: gpio.c  main.c  stm32l4xx_it.c
Drivers/CMSIS/Core/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_gcc.h  cmsis_iccarm.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/: jtest_cycle.h  jtest_fw.h  jtest_group.h  jtest_group_call.h  jtest_group_define.h  jtest_pf.h  jtest_systick.h  jtest_test.h  jtest_test_call.h  jtest_test_define.h
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/: math_helper.h
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/basic_math_tests/: basic_math_templates.h
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/complex_math_tests/: complex_math_templates.h
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/controller_tests/: controller_templates.h
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/fast_math_tests/: fast_math_templates.h
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/DspLibTest_FVP_A5/RTE/: RTE_Components.h
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/inc/: ref.h
Drivers/CMSIS/DSP/Examples/ARM/arm_graphic_equalizer_example/: math_helper.h
Drivers/CMSIS/DSP/Include/: arm_math.h
Drivers/CMSIS/DSP/PythonWrapper/cmsisdsp_pkg/src/: cmsismodule.h
Drivers/CMSIS/RTOS2/Include/: cmsis_os2.h
app/: CMakeLists.txt
app/hdd4780/: CMakeLists.txt  hdd4780.c  hdd4780.cpp  hdd4780.h  hdd4780.hpp  hdd4780_commands.h  hdd4780_commands.hpp  hdd4780_config.h  hdd4780_config.hpp
app/main/: CMakeLists.txt  font5x8.hpp  main.cpp
app/pcf8574/: CMakeLists.txt  pcf8574.cpp  pcf8574.hpp  pcf8574_config.hpp
app/utility/: i2c_device.cpp
(+16 files in other folders)
